<resources>
    <string name="app_name">MazotApp</string>
    <string name="email">E-posta</string>
    <string name="password">Parola</string>
    <string name="mobilNumber">Telefon Numarası (512 345 678)</string>
    <string name="againPassword">Parola Tekrarı</string>
    <string name="loginB">Giriş Yap</string>
    <string name="registerB">Kayıt Ol</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="verifyPhoneNumberEd">Doğrulama kodu</string>
    <string name="loginT"><u>Giriş yapmak için tıklayınız.</u></string>
    <string name="registerT"><u>Kayıt olmak için tıklayınız.</u></string>
    <string name="continueB">Devam et</string>
    <string name="exitB">Çıkış yap</string>
    <string name="findStationB">İstasyonları Listele</string>
    <string name="findStationT">Size En Uygun İstasyonu Bulun</string>
    <string name="carFuelT">Akaryakıt Türünüz</string>
    <string name="fuelGasolineRB">Benzin</string>
    <string name="fuelDieselRB">Dizel</string>
    <string name="fuelLPGrb">LPG</string>
    <string name="searchingServicePointT">Aradığınız Puanı Seçiniz</string>
    <string name="stationCriteria">Özellikler</string>
    <string name="lowPriceCB">En Ucuz</string>
    <string name="distanceCB">En Yakın</string>
    <string name="toiletCB">En Temiz WC</string>
    <string name="starbucksCB">Starbucks</string>
    <string name="stationBrandCB">İstasyon Markası</string>
    <string name="socialFacilityCB">Sosyal Tesisleri</string>
    <string name="goFindStationB">İstasyon Bul</string>
    <string name="nav_campaign">Kampanya</string>
    <string name="nav_home">Ana Sayfa</string>
    <string name="nav_settings">Ayarlar</string>
    <string name="openGoogleMap">Haritada Göster</string>
    <string name="stationInfoFeatures">Özellikler:</string>
    <string name="facilityCriteria">Tesis Kriterleri</string>
    <string name="homeFragmentT">Sevdiklerinize emniyet kemeriyle bağlanın. </string>
    <string name="nearStation">En Yakın İstasyon </string>
    <string name="mostUseStations">En Sık Kullanılanlar </string>
    <string name="socialFacilityB">Sosyal Tesisler </string>
    <string name="brandsB">Markalar </string>
    <string name="feesbackT">Geri bildiriminizi yazın </string>
    <string name="Petrol_Ofisi">Petrol Ofisi </string>
    <string name="ConfirmB">Onayla </string>
</resources>