<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:layout_gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@color/topColor"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:src="@drawable/mazot_logo_top" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/topPanel"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topText"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:text="@string/findStationT"
                android:textColor="@color/findStationT"
                android:textSize="35sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_below="@+id/topText"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_station_panel"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Önerilen istasyon"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_station"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_height="match_parent"
                        android:id="@+id/imgStNear"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvNearName"
                            android:layout_marginStart="10dp"
                            android:text="" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:padding="3dp"
                                android:src="@drawable/carwash_icon" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:padding="3dp"
                                android:layout_marginStart="10dp"
                                android:src="@drawable/market_icon" />

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:padding="3dp"
                                android:layout_marginStart="10dp"
                                android:src="@drawable/toilet_icon" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/tvNearPrice"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/tvNearDistance"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="13sp" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="40dp"
            android:id="@+id/fuelPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_station_panel"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingStart="20dp"
                android:text="@string/carFuelT"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_marginTop="10dp"
                android:id="@+id/rgCarFuel"
                android:background="@drawable/line_background"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_marginStart="50dp"
                    android:id="@+id/rbGasoline"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/rb_circle_background"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/fuelGasolineRB"
                    android:textColor="@color/white" />

                <RadioButton
                    android:layout_marginStart="30dp"
                    android:layout_gravity="center"
                    android:id="@+id/rbDiesel"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/rb_circle_background"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/fuelDieselRB"
                    android:textColor="@color/white" />

                <RadioButton
                    android:layout_marginStart="30dp"
                    android:id="@+id/rbLPG"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/rb_circle_background"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/fuelLPGrb"
                    android:textColor="@color/white" />

            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/stCriteria"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fuelPanel"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingStart="20dp"
                android:text="@string/stationCriteria"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="@drawable/line_background"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cbLowPrice"
                    android:layout_width="80dp"
                    android:layout_marginStart="50dp"
                    android:layout_height="80dp"
                    android:button="@drawable/cb_low_price_background" />

                <CheckBox
                    android:id="@+id/cbDistance"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="30dp"
                    android:button="@drawable/cb_distance_background" />

                <CheckBox
                    android:id="@+id/cbBestToilet"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="30dp"
                    android:button="@drawable/cb_wc_background" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="80dp"
                    android:text="@string/lowPriceCB"
                    android:layout_marginStart="60dp"
                    android:textSize="15sp"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="100dp"
                    android:text="@string/distanceCB"
                    android:layout_marginStart="30dp"
                    android:textSize="15sp"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="140dp"
                    android:text="@string/toiletCB"
                    android:textSize="15sp"
                    android:layout_height="30dp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_below="@+id/stCriteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp">

            <Button
                android:id="@+id/btnFindStation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/button_oval"
                android:text="@string/findStationB"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>

